Version: $Id$

This file lists significant changes to WebCalendar. For a more detailed
list (that includes specific bugs fixed, please look at ChangeLog):

http://webcalendar.cvs.sourceforge.net/*checkout*/webcalendar/webcalendar/ChangeLog

---------------------------------------------------------------------------

Version 1.3.0 (?? ??? 2007)
  - Fixes:
  - New Features / Enhancements:
  - The following translations were updated:

Version 1.1.3 (04 Aug 2007)

  - New Features / Enhancements:
    = Import / Export / iCalendar / hCalendar / RSS
      + VTIMEZONE information is now captured from imported ics files and can be reused
        for future exports. This greatly simplifies the process and speeds up exports.
    = User Interface
      + Added option to display end times in calendars
      + Added CAPTCHA validation option  to Public Access event creation
  - The following translations were updated:
    German
    Basque

Version 1.1.2 (18 Dec 2006)

  - New Features / Enhancements:
    = Site Extras
      + Radio control are now available
      + Checkbox controls are now available.
      + Multi-Select Select controls are now available.
      + Site-Extra fields are now included in emails.
      + You can now set where each Site Extra fields show up.
        - All
        - Email
        - View (view_entry)
        - Reports
        - Reminders
        Any combination of the above is possible using bitwise operators.
    = User Interface
      + Date Range Searches have been added
      + Site Extra Seaches have been added
      + Category Filter has beed added to Advanced Search
      + Added Category Color option
      + Admin can now specify a background image for inclusion into CSS
      + Added new feature 'Display Long Day Names'
      + Added new Color Picker with many options
      + Added new About WebCalendar page
      + Reports can now contain 'fullname'
      + When creating Reports, you can now simply click desired value