@@ -4,8 +4,8 @@ NOTE: This is the 1.3.X development branch.  Put code changes right
 below the 1.3.0+CVS label below.
 
 Version 1.3.0+CVS (?? ??? 2007)
- - Remove '+' icon from month.php.  Users can now double-click on a date to
-   add a new event.
+ - Remove '+' icon from month.php, week.php.
+   Users can now double-click on a date to add a new event.
  - Added CDATA block around JS in view_r.php
  - Applied PATCH [ 1203702 ] Sys-Admin Guide fails to mention LDAP support in PHP
  - Updated list of supported languages in SysAdmin.html
