@@ -11,6 +11,9 @@ http://webcalendar.cvs.sourceforge.net/*checkout*/webcalendar/webcalendar/Change
 Version 1.3.0 (?? ??? 2007)
   - Fixes:
   - New Features / Enhancements:
+    = User Interface
+      + In some pages (week, month), the '+' icon has been removed.
+        Users can double-click on the table cell to add an event.
   - The following translations were updated:
 
 Version 1.1.3 (04 Aug 2007)
